<resources>
    <string name="app_name">Rubricon</string>
    <string name="subject_item1">Crear Asignatura</string>
    <string name="subject_item2">Lista de Estudiantes</string>
    <string name="subject_item4">Crear Rubricas</string>


    <string name="subject_item10">Agregar Rubricas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="username">Username</string>
    <string name="user_email">username@uninorte.edu.co</string>
    <string name="user_image">user image profile</string>
    <string name="dialogo_meg">El mensaje</string>
    <string name="titulo">El titulo</string>
    <string name="main_description">App diseñada por estudiantes de ingeniería electrónica como proyecto de Programación Móvil.
    \n \n Luis Cantillo \n Manuel Bojato \n Julian Acosta
    </string>

    <!--String for buttons in subject_list.xml-->
    <string name="btnAddStudentText">Botón Agregar Estudiantes</string>
    <string name="btnRemoveSubjectText">Botón Eliminar Asignatura</string>
    <string name="btnRemoveStudentText">Botón Eliminar Estudiantes</string>

    <!--String for rubric elements-->
    <string name="newRubricTitle">Nueva Rubrica</string>
    <string name="newCategoryTitle">Nueva Categoria</string>
    <string name="mainRubricName">Nombre Rubrica</string>
    <string name="mainCategoryNameText">Nombre Categoria</string>
    <string name="mainCategoryWeightText">Peso Categoria</string>
    <string name="mainElementNameText">Nombre Elemento</string>
    <string name="mainElementWeightText">Peso Elemento</string>
    <string name="mainElementOneText">Nivel 1</string>
    <string name="mainElementTwoText">Nivel 2</string>
    <string name="mainElementThreeText">Nivel 3</string>
    <string name="mainElementFourText">Nivel 4</string>

    <!--String for rubric elements-->
    <string name="newEvalTitle">Nueva Evaluacion</string>
    <string name="mainTitleEval">Nombre Evaluacion</string>
    <string name="mainTitlePeso">Peso</string>



    <!--Generic strings for whole project-->
    <string name="tvGenericTextView">TextView</string>
    <string name="addTextBtn">Agregar</string>
    <string name="mainTitleText">Nombre</string>
    <string name="mainWeightText">Peso</string>

</resources>
