<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvTitleRubric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newRubricTitle"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNameRubric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainRubricName"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etCategoryRubric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainCategoryNameText"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etCategoryWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainCategoryWeightText"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etElementName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainElementNameText"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etElementWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainElementWeightText"
        android:inputType="number"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etLevelOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainElementOneText"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etLevelTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainElementTwoText"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etLevelThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainElementThreeText"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etLevelFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainElementFourText"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnNewRubric"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTextBtn"
        android:textStyle="bold" />
</LinearLayout>