<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvTitleEval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newEvalTitle"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNameEval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainTitleEval"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etpeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainTitlePeso"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnNewEval"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTextBtn"
        android:textStyle="bold" />
</LinearLayout>