<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/tvTitleCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newCategoryTitle"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etNameCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainTitleText"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/etWeightCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/mainWeightText"
        android:inputType="numberSigned"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnNewCategory"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTextBtn"
        android:textStyle="bold" />
</LinearLayout>