<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRubricName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/tvGenericTextView"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnEditRubricFields"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnAddStudentText"
            android:onClick="onClickEditRubricFields"
            android:src="@drawable/ic_assessment"
            android:tint="@color/colorMainBackground" />

        <ImageButton
            android:id="@+id/btnDeleteRubric"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/btnRemoveSubjectText"
            android:onClick="onClickBtnDeleteRubric"
            android:src="@drawable/ic_remove" />

    </LinearLayout>

    <ListView
        android:id="@+id/lvCategoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        tools:ignore="NestedScrolling" />

</LinearLayout>