<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCategoryName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/tvGenericTextView"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tvCategoryWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/tvGenericTextView"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvCategoryRubric"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/tvGenericTextView"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageButton
            android:id="@+id/btnEditElementFields"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickEditElementFields"
            android:src="@drawable/ic_assessment"
            android:tint="@color/colorMainBackground"
            android:contentDescription="@string/btnAddStudentText" />

        <ImageButton
            android:id="@+id/btnDeleteCategory"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickBtnDeleteCategory"
            android:src="@drawable/ic_remove"
            android:contentDescription="@string/btnRemoveSubjectText" />

    </LinearLayout>

</LinearLayout>